bottom spacing issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -5992,7 +5992,7 @@ left: 17rem;
 }
 // <-------END Calculator css--------->
 .simulation-height {
-  min-height: calc(100vh - 411px) !important;
+  min-height: calc(100vh - 418px) !important;
 }
 .other-costing-simulation {
   min-height: calc(100vh - 337px);
